# radar_i

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
anchor/: Anchor.toml  Cargo.toml  tsconfig.json
anchor/programs/insurance_program/: Cargo.toml
anchor/programs/insurance_program/src/: lib.rs  tempCodeRunnerFile.rs
anchor/src/: index.ts  radar_i-exports.ts
anchor/tests/: radar_i.spec.ts
src/: global.d.ts
src/app/: globals.css  page.tsx
src/app/account/: page.tsx
src/app/account/[address]/: page.tsx
src/app/clusters/: page.tsx
src/app/radar_i/: page.tsx
src/app/whatis/: page.tsx
src/components/: ClaimPage.tsx  ConnectionPage.tsx  InsurancePage.tsx  WalletConnectionProvider.tsx
src/components/radar_i/: radar_i-data-access.tsx  radar_i-feature.tsx  radar_i-ui.tsx
src/components/ui/: command.tsx  input.tsx  scroll-area.tsx  spinner.tsx
src/lib/: cpage.tsx
